<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/etPoso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="numberDecimal"
        android:text="@string/amount"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCnvk" />

    <Button
        android:id="@+id/btnCnv"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:background="#EFE"
        android:fontFamily="serif-monospace"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnCnvk"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPoso" />

    <Button
        android:id="@+id/btnClr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="#FEE"
        android:fontFamily="casual"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRes" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="206dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="200 Ft ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 0.64 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="20 Kc ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 0.79 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="500 Ft ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 1.61 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:background="#EFF"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="50 Kc ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:background="#EFF"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 1.97 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="1.000 Ft ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 3.22 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="100 Kc ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 3.93 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="2.000 Ft ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 6.44 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:background="#EFF"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="200 Kc ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFF"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 7.87 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="5.000 Ft ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EFE"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 16.11 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="end"
                android:paddingVertical="5dp"
                android:text="500 Kc ="
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start"
                android:paddingVertical="5dp"
                android:text=" 19.67 Euro"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnCnvk"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:paddingRight="6dp"
        android:paddingLeft="5dp"
        android:background="#EFF"
        android:text="@string/convKc"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCnv"
        app:layout_constraintTop_toBottomOf="@+id/etPoso"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/tvPrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/prices"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClr"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>