<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD"
    tools:context="com.paradeigma.leonidas.happyconverter.MainActivity"

    >


    <!--<Button-->
        <!--android:id="@+id/btnCnv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_toLeftOf="@+id/btnClr"-->
        <!--android:layout_toStartOf="@+id/btnClr"-->
        <!--android:text="@string/convert"-->
        <!--android:textAllCaps="false"-->
        <!--android:textSize="16sp" />-->

    <TextView
        android:id="@+id/tvEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:background="#EEE"
        android:padding="5dp"
        android:text="@string/euro"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvHung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvCzech"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#EEE"
        android:padding="5dp"
        android:text="@string/HungFt"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvCzech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etHung"
        android:layout_marginTop="9dp"
        android:background="#EEE"
        android:padding="5dp"
        android:text="@string/CzechKc"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPoso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEuro"
        android:layout_alignBottom="@+id/tvEuro"
        android:layout_alignLeft="@+id/etHung"
        android:layout_alignStart="@+id/etHung"
        android:ems="10"
        android:hint="0.00"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etHung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPoso"
        android:layout_toEndOf="@+id/tvCzech"
        android:layout_toRightOf="@+id/tvCzech"
        android:ems="10"
        android:hint="0.00 Ft"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etCzech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvCzech"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvHung"
        android:layout_toEndOf="@+id/tvCzech"
        android:layout_toRightOf="@+id/tvCzech"
        android:ems="10"
        android:hint="0.00 Kc"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />


    <!--<Button-->
        <!--android:id="@+id/btnClr"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignLeft="@+id/etCzech"-->
        <!--android:layout_alignStart="@+id/etCzech"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="@string/clear"-->
        <!--android:textAllCaps="false"-->
        <!--android:textSize="16sp" />-->

    <!--<TableLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/btnCnv"-->
        <!--android:layout_marginTop="26dp">-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->

            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView2"-->
                <!--android:layout_width="89dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="200 Ft ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView14"-->
                <!--android:layout_width="77dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 0.64 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView3"-->
                <!--android:layout_width="88dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="20 Kc ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView4"-->
                <!--android:layout_width="155dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 0.79 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView5"-->
                <!--android:layout_width="89dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="500 Ft ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView6"-->
                <!--android:layout_width="78dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 1.61 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView15"-->
                <!--android:layout_width="69dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="50 Kc ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView7"-->
                <!--android:layout_width="92dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 1.97 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView8"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="1.000 Ft ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView10"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 3.22 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView9"-->
                <!--android:layout_width="76dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="100 Kc ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView16"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text=" 3.93 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView131"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="2.000 Ft ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView171"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 6.44 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView121"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="200 Kc ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView111"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 7.87 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView13"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="5.000 Ft ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView17"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 16.11 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView12"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="500 Kc ="-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView11"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=" 19.67 Euro"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->
        <!--</TableRow>-->
    <!--</TableLayout>-->


</RelativeLayout>
